并发编程相关

--- a/lwj-thread/并发编程（一）多线程使用.md
+++ b/lwj-thread/并发编程（一）多线程使用.md
@@ -27,21 +27,23 @@
 3. Callable/Future
 4. 线程池：JUC下的Executors
 
-- 作用：合理利用cpu资源，提高吞吐量
-
-
-
-## 实际应用
+合理利用cpu资源，提高吞吐量：并行运行线程的数量=cpu的`内核数`
 
 
 
 ## 线程的生命周期
 
-<img src="https://gitee.com/lwj156/picture/raw/master/image/thread/image.png" alt="img" style="zoom:50%;" />
+![image-20210225175239111](https://gitee.com/lwj156/picture/raw/master/image/thread/image-20210225175239111.png)
 
 - BLOCKED和WAITING状态的区别：BLOCKED是锁阻塞
 
 
+
+## 线程的启动
+
+<img src="https://gitee.com/lwj156/picture/raw/master/image/thread/image-20210225172435402.png" alt="image-20210225172435402" style="zoom:50%;" />
+
+> Thread的start方法，实际上是调用native的start0方法。start0执行JVM_StartThread(jvm.cpp)方法，底层到`os::start_thread(thread)`调用平台启动线程，最终会调用thread.cpp文件中 的`JavaThread::run()`方法
 
 
 
@@ -50,15 +52,14 @@
 > 线程的操作底层都是调用os`操作系统`的指令
 
 1. Thread.stop()：不建议使用，强制终止
-2. Thread.Interrupt：标志，把volatile修饰的isInterrupted设置为true,
+2. Thread.Interrupt：标志，把volatile修饰的isInterrupted设置为true。执行后方法还会执行，中断取决于线程如何处理，中断`阻塞`线程可以在interceptedException中处理
 
 **线程的复位**：
 
 1. Thread.Interrupted：把标志位isInterrupted复位为false，不会更替，只会变为false
+2. 中断处于阻塞状态的线程（wait、sleep等），会抛出`InterruptException`，标志位isInterrupted复位为false。（底层就是先复位在抛出异常）
 
-2. 中断处于阻塞状态的线程（wait、park等），会抛出`InterruptException`，标志位isInterrupted复位为false。（底层就是先复位在抛出异常）
-
-
+![image-20210225174753696](https://gitee.com/lwj156/picture/raw/master/image/thread/image-20210225174753696.png)
 
 > 备注：
 >
