--- a/lwj-thread/并发编程（三）线程安全性.md
+++ b/lwj-thread/并发编程（三）线程安全性.md
@@ -1,5 +1,12 @@
 # 并发编程（三）线程安全性
 
+
+
+> 1. 共享资源是否有多个线程同时访问
+> 2. 希望结果跟预期的一致
+
+
+
 ## Volatile
 
 **作用**：保证共享资源的可见性
@@ -14,7 +21,7 @@
 
 #### 硬件层面
 
-<img src="%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%EF%BC%88%E4%B8%89%EF%BC%89%E7%BA%BF%E7%A8%8B%E5%AE%89%E5%85%A8%E6%80%A7.assets/image-20201122225129768.png" alt="image-20201122225129768" style="zoom:50%;" />
+<img src="https://gitee.com/lwj156/picture/raw/master/image/thread/image-20210227103950199.png" alt="image-20210227103950199" style="zoom:33%;" />
 
 **cpu的高速缓存**：分为L1（指令缓存）、L2（数据缓存）、L3  -->性能逐步下降
 
@@ -27,24 +34,35 @@
 `硬件层面解决可见性`：
 
 1. 总线锁：处理器之间的操作互斥->性能差
+
+   > cpu获取总线锁，总线发出lock信号，其他处理器不能操作主内存
+
 2. 缓存锁：降低锁力度
 
 > 如何实现缓存锁？通过MESI协议
->
-> <img src="%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%EF%BC%88%E4%B8%89%EF%BC%89%E7%BA%BF%E7%A8%8B%E5%AE%89%E5%85%A8%E6%80%A7.assets/image-20201122225252551.png" alt="image-20201122225252551" style="zoom:50%;" />
->
-> <img src="%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%EF%BC%88%E4%B8%89%EF%BC%89%E7%BA%BF%E7%A8%8B%E5%AE%89%E5%85%A8%E6%80%A7.assets/image-20201122225310337.png" alt="image-20201122225310337" style="zoom:50%;" />
->
+
+<img src="https://gitee.com/lwj156/picture/raw/master/image/thread/image-20201122225252551.png" alt="image-20201122225252551" style="zoom:50%;" />
+
+<img src="https://gitee.com/lwj156/picture/raw/master/image/thread/image-20201122225310337.png" alt="image-20201122225310337" style="zoom:50%;" />
+
 > cpu缓存一致性协议（MESI）：缓存的4种状态
 >
-> 1. M 共享数据缓存在当前cpu中，并且是修改状态，即缓存数据和主内存不一致
-> 2. E 数据缓存在当前cpu中，独占并且没有被修改
-> 3.  S 数据被多个cpu缓存，并且与主存一致
-> 4.  I 表示缓存已经失效
->
-> mesi协议会有阻塞问题，因此引入storebuffer缓冲区，在cpu当中，主内存读取先读buffer，但是仍有重排序等问题
->
-> <img src="%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%EF%BC%88%E4%B8%89%EF%BC%89%E7%BA%BF%E7%A8%8B%E5%AE%89%E5%85%A8%E6%80%A7.assets/image-20201122225646025.png" alt="image-20201122225646025" style="zoom:50%;" />
+> 1. M (Modify) 共享数据缓存在当前cpu中，并且是修改状态，即缓存数据和主内存不一致
+>2. E (Exclusive) 数据缓存在当前cpu中，独占并且没有被修改
+> 3.  S (Shared) 数据被多个cpu缓存，并且与主存一致
+>4.  I (Invalid) 表示缓存已经失效
+
+**读请求**：M、E、S状态的缓存可以被读取，I状态只能从`主存`中读取
+
+**写请求**：M、E状态可以写，S状态需要使其他CPU缓存失效
+
+**引入缓存锁后仍存在的问题：**处于S状态的cpu进行写请求的时候需要跟其他CPU`通信`，这就会存在阻塞问题
+
+> 因此引入storebuffer缓冲区（相当于异步处理），在cpu当中，主内存读取先读buffer，但是仍有重排序等问题
+
+<img src="https://gitee.com/lwj156/picture/raw/master/image/thread/image-20210226171817515.png" alt="image-20210226171817515" style="zoom:50%;" />
+
+> 在没有屏障指令的情况下，两个cpu同时执行，cpu0对于value=10先写入storebuffer在通知cpu1，继续执行isFinish，因为e状态可以直接修改修改。cpu1读取到isFinish为true，但此时的value还未修改为10，因此assert判断为false
 
 
 
@@ -64,7 +82,7 @@ CPU层面提供了3种屏障
 
 导致`可见性`的根本原因：高速缓存和重排序
 
-JMM的`核心`是解决了有序性和可见性
+JMM的`核心`是解决了**有序性和可见性**
 
 **可见性和有序性解决方式：**通过volatile、synchronized、final、happens-before
 
@@ -85,13 +103,22 @@ loadload、storestore、loadstore、storeload、
 
 
 
-Happens-Before规则
+#### Happens-Before规则
+
+1. 程序顺序规则：单线程对于结果来说是不变的
+2. volatile变量规则：volatile修饰的变量，写操作对于后续读操作可见
+3. 传递性规则：1 h-b 2，2 h-b 3，则1 h-b 3
+4. start规则：线程a中启动b线程，则启动前的数据对于线程b可见
+5. join规则：线程b join 线程a，则线程a的共享变量操作对于b可见
+6. 监视器锁规则：对于锁（synchronized）的解锁对于这个锁的加锁可见，即多线程之间synchronized代码块之间是顺序可见
+7. 线程中断规则：对线程interrupt方法的调用happend-before线程中断检测
+8. 对象创建规则：对象初始化完成happend-before它的finalize()方法
 
 
 
 ## 常见问题：
 
-1. 如何实现线程的顺序执行？
+#### 如何实现线程的顺序执行？
 
 <img src="%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%EF%BC%88%E4%B8%89%EF%BC%89%E7%BA%BF%E7%A8%8B%E5%AE%89%E5%85%A8%E6%80%A7.assets/image-20201129182036408.png" alt="image-20201129182036408" style="zoom:50%;" />
 
@@ -99,12 +126,13 @@ Happens-Before规则
 
 
 
-2. MESI协议实现可见性和有序性：
+#### MESI协议实现可见性和有序性：
 
 无法完全实现。由于MESI store buffer当中是异步的，可能会造成有序性问题，因此通过`内存屏障`来解决
 
 
 
-3. double check的作用：
+#### double check的作用：
 
 在超高并发的情况下，对象初始化可能会有重排序，因此double ckeck的单例也需要加volatile
+
